--- a/OSK_Mobile/OSK_Mobile/MainPage.xaml
+++ b/OSK_Mobile/OSK_Mobile/MainPage.xaml
@@ -26,15 +26,15 @@
     <StackLayout Orientation="Vertical" Padding="30" Spacing="40">
         <BoxView HeightRequest="10" />
         <Frame BackgroundColor="#BF043055" HasShadow="False">
-            <StackLayout Orientation="Horizontal" >
-                <RadioButton x:Name="StudentRadio" Content="Kursant" Value="1" TextColor="White" IsChecked="True" />
-                <RadioButton x:Name="EmployeeRadio" Content="Instruktor" Value="2" TextColor="White" />
+            <StackLayout Orientation="Horizontal" HorizontalOptions="Center" >
+                <RadioButton x:Name="StudentRadio" Content="Kursant" Value="1" TextColor="White" IsChecked="True" Margin="0, 0, 20, 0"/>
+                <RadioButton x:Name="EmployeeRadio" Content="Instruktor" Value="2" TextColor="White" Margin="20, 0, 0, 0" />
             </StackLayout>
         </Frame>
         <Frame BackgroundColor="#BF043055" HasShadow="False">
             <StackLayout Orientation="Vertical" Spacing="10">
                 <Entry x:Name="LoginTxt" Text="{Binding Email}" Placeholder="Login"   
-                           PlaceholderColor="White" HeightRequest="40"   
+                           PlaceholderColor="White" HeightRequest="40" 
                            Keyboard="Email"  
                            TextColor="White"/>
                 <Entry x:Name="PasswordTxt" Text="{Binding Password}" Placeholder="Hasło"   
